@@ -70,8 +70,11 @@ sub new(){
 # return a copy of the tree ref
 sub clone($){
     my $tree_ref = shift;
-
-    return(dclone($tree_ref));
+    if (defined($tree_ref)){
+      return(dclone($tree_ref));
+    }else{
+      return undef;
+    }
 }
 
 
