@@ -14,6 +14,7 @@ version 2.4.1:
   - API bug fixes in job submission parsing
   - Added standby info into `oarnodes -s` and available_upto info into
     /resources uri of the API
+  - Bug Grid'5000 #2687 Fix possible crashes of the scheduler.
 
 version 2.4.0:
 --------------
